tests/baselines/reference/asyncImportNestedYield.errors.txt
error TS2318: Cannot find global type 'AsyncIterableIterator'.
error TS2468: Cannot find global value 'Promise'.
tests/cases/compiler/asyncImportNestedYield.ts(2,5): error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your `--lib` option.
tests/cases/compiler/asyncImportNestedYield.ts(2,19): error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your `--lib` option.


!!! error TS2318: Cannot find global type 'AsyncIterableIterator'.
!!! error TS2468: Cannot find global value 'Promise'.
==== tests/cases/compiler/asyncImportNestedYield.ts (2 errors) ====
    async function* foo() {
        import((await import(yield "foo")).default);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your `--lib` option.
                      ~~~~~~~~~~~~~~~~~~~
!!! error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your `--lib` option.
    }